load static to home, login page

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,11 @@
     <head>
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
         <title>Traffic Violation Report System</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     </head>
 <body>
     {% block content %}
+    <h1>Home Page</h1>
     {% endblock %}
 </body>
 </html>
